@@ -98,7 +98,11 @@ private:
     friend class Cond;
 
 #ifdef _WIN32
+#   if defined(_WIN32_WINNT) && _WIN32_WINNT >= 0x0400
     mutable CRITICAL_SECTION _mutex;
+#   else
+    HANDLE _mutex;
+#   endif
 #else
     mutable pthread_mutex_t _mutex;
 #endif    
